--- a/MyBank/src/index.css
+++ b/MyBank/src/index.css
@@ -25,7 +25,10 @@
 
 }
 form{
-    padding:70px;
+    padding-top: 15px;
+    padding-left: 70px;
+    padding-right: 70px;
+    padding-bottom: 70px;
     border-radius: 5px;
     align-items: center;
     justify-content: center;
@@ -60,9 +63,7 @@ form{
     justify-content: center;
     /* height: 500px; */
 }
-.reghead{
-    text-align: center;
-}
+
 
 .imgdiv{
     height: 500px;
