--- a/MyBank/src/index.css
+++ b/MyBank/src/index.css
@@ -25,7 +25,7 @@
 
 }
 form{
-    padding-top: 15px;
+    padding-top: 30px;
     padding-left: 70px;
     padding-right: 70px;
     padding-bottom: 70px;
@@ -46,6 +46,14 @@ form{
     display: flex;
     justify-content: space-between;
     width: 100%;
+}
+.formdiv{
+    background-color: #f00909;
+    height: 500px;
+
+}
+.formbox{
+   margin-top: 30px;
 }
 .maindiv{
     display: flex;
